--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -191,6 +191,13 @@ product-info {
 
 .product-form__submit {
   margin-bottom: 1rem;
+  background-color: #58d68d;
+}
+.product-form__submit:hover {
+  background-color: #5dade2;
+}
+.product-form__submit[disabled] {
+  background-color: #FF0033;
 }
 
 .product-form__submit[aria-disabled='true'] + .shopify-payment-button .shopify-payment-button__button[disabled],
