--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -93,6 +93,11 @@
             </span>
             {%- render 'loading-spinner' -%}
           </button>
+          {%- if product.selected_or_first_available_variant.inventory_quantity >= 5 -%}
+          <p>Available!</p>
+          {%- elsif product.selected_or_first_available_variant.inventory_quantity < 5 -%}
+          <p>Low stock</p>
+          {%- endif -%}
           {%- if show_dynamic_checkout -%}
             {{ form | payment_button }}
           {%- endif -%}
